# benchmarck-python-framework

./: README.md  generate_json_file.py  generated_file_2MB.json
django-socio-grpc/: README.MD  db.sqlite3  pyproject.toml
django-socio-grpc/benchmarkdsg/: async_client.py  db.sqlite3  manage.py
django-socio-grpc/benchmarkdsg/benchmarkdsg/: asgi.py  handlers.py  settings.py  urls.py  wsgi.py
django-socio-grpc/benchmarkdsg/dbendpoint/: apps.py  handlers.py  models.py  serializers.py  services.py
django-socio-grpc/benchmarkdsg/dbendpoint/grpc/: dbendpoint.proto  dbendpoint_pb2.py  dbendpoint_pb2_grpc.py
django-socio-grpc/benchmarkdsg/dbendpoint/migrations/: 0001_initial.py
django-socio-grpc/benchmarkdsg/simpleendpoint/: apps.py  handlers.py  services.py
django-socio-grpc/benchmarkdsg/simpleendpoint/grpc/: simpleendpoint.proto  simpleendpoint_pb2.py  simpleendpoint_pb2_grpc.py
fast-api/: Dockerfile  app.py  fastApiPost.db  pyproject.toml  test.py
flask/: README.md  app.py  client.py  client_sync.py  pyproject.toml
harp-proxy/: Makefile  README.rst  client.py  config.yml  pyproject.toml
harp-proxy/harp_benchmark/: controllers.py
