[tool.poetry]
name = "benchmark-dsg"
version = "0.1.0"
description = ""
authors = ["Adrien Montagu <adrienmontagu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
django-rest-framework = "^0.1.0"
django-socio-grpc = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
