[tool.poetry]
name = "benchmark-fast-api"
version = "0.1.0"
description = ""
authors = ["magloire ndabagera <magloirendabagera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.4"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
